Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------
#592522 by Nick_vh, pwolanin | quaoar: Fixed Hooks node_type(), taxonomy and user knocks out our database server.
#1394276 by pwolanin, Nick_vh, Fix for logic for last indexed timestamp.
#1388916 by rwohleb, pwolanin: Fix for ctype_digit() port validation fails for ports < 256.
#1391850 by cpliakas: Fix for Fatal error when Solr server is not available on non-search pages.
#1389306 by Nick_vh: Fixed Wrong helptext link if facetapi is not installed.
#1252648 by cpliakas, Nick_vh: Added Allow for enabling facet blocks on non-search pages.
#1161608 by scor, Nick_vh: Added Index format_username()($account).
#1380448 by Nick_vh | longwave: Fixed Menu item description for /admin/reports/apachesolr.
#1387272 by cpliakas: Fixed The cancel links and button submission redirects in facet configuration forms are broken.
#1387088 by swentel, Nick_vh: Fixed apachesolr_index_mark_for_reindex() not found during enable/disable and drush can't load apachesolr.index.inc.
#1313698 by Nick_vh, denikin: Fixed Support for search of multiword content in facets/fields .
#966796 by Nick_vh, scor, BarisW, wesnick, swentel, LSU_JBob | Crell: Added Separate indexer for multiple entity types.

Apache Solr integration 7.x-1.x-beta13, 2011-12-21
------------------------------
#1376278 by Nick_vh: Fixed Inconsistent behavior of data facets producing unlimited filtering, inconsistent counts, or gap mismatches.
#1372952 by pwolanin | albertosouza: Fixed Wrong variable in apachesolr.module.

Apache Solr integration 7.x-1.0-beta12, 2011-12-12
------------------------------
#1369208 by pwolanin: Add configure links in .info files.
#1369184 by pwolanin: Restore MLT block edit use of block module configure form.
#1369144 by pwolanin: Fix for cleanup settings table and restore cron index operation.
#1353422 by Nick_vh | Marty2081: Added Using view modes in 'more like this" block.