@@ -175,6 +175,7 @@
                 catenateAll="0"
                 splitOnCaseChange="1"
                 preserveOriginal="1"/>
+        <filter class="solr.LengthFilterFactory" min="2" max="100" />
         <filter class="solr.LowerCaseFilterFactory"/>
         <filter class="solr.SnowballPorterFilterFactory" language="English" protected="protwords.txt"/>
         <filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
@@ -197,6 +198,7 @@
                 catenateAll="0"
                 splitOnCaseChange="1"
                 preserveOriginal="1"/>
+        <filter class="solr.LengthFilterFactory" min="2" max="100" />
         <filter class="solr.LowerCaseFilterFactory"/>
         <filter class="solr.SnowballPorterFilterFactory" language="English" protected="protwords.txt"/>
         <filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
@@ -216,6 +218,7 @@
                 catenateNumbers="1"
                 catenateAll="0"
                 splitOnCaseChange="0"/>
+        <filter class="solr.LengthFilterFactory" min="2" max="100" />
         <filter class="solr.LowerCaseFilterFactory"/>
       </analyzer>
       <analyzer type="query">
@@ -234,6 +237,7 @@
                 catenateNumbers="0"
                 catenateAll="0"
                 splitOnCaseChange="0"/>
+        <filter class="solr.LengthFilterFactory" min="2" max="100" />
         <filter class="solr.LowerCaseFilterFactory"/>
       </analyzer>
     </fieldType>
